# blaze-tauri

./: .env  .gitignore  .prettierignore  README.md  index.html  package.json  pnpm-lock.yaml  strategy.md  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  everything-else.md
.github/workflows/: release.yml
src/: App.css  App.tsx  catchall.tsx  main.tsx  root.tsx  routes.ts
src-tauri/: .gitignore  Cargo.toml  crash_log.txt  tauri.conf.json  test.db
src-tauri/capabilities/: default.json  desktop.json  widget.json
src-tauri/sidecar/: index.js  package.json
src-tauri/sidecar/main/: index.js
src-tauri/src/: classifier.rs  ctx.rs  error.rs  lib.rs  main.rs  prelude.rs
src-tauri/src/db/: connection.rs
src-tauri/src/ipc/: project.rs  response.rs  task.rs
src-tauri/src/model/: bmc_base.rs  mod.rs  model_store.rs  project.rs  seed_for_dev.rs  task.rs
src-tauri/src/model/store/: mod.rs  surreal_modql.rs  surreal_store.rs  try_froms.rs  x_take_impl.rs
src-tauri/src/models/: activity.rs  category.rs  client.rs  day.rs  meeting.rs  mod.rs  program.rs  project.rs  routine.rs  task.rs  user.rs
src-tauri/src/track/: afk.rs  heartbeat.rs  installed_app.rs  mod.rs  targets.rs
src-tauri/src/utils/: autostart.rs  commands.rs  db.rs  global_shortcut.rs  init_supabase.rs  mod.rs  notification.html  notification.rs  store.rs  stronghold.rs  tray.rs  x_take.rs
src/components/ScheduleDashboard/: ActivitiesColumn.tsx  BaseColumn.tsx  ColumnHeader.tsx  EventBlock.tsx  TimeColumn.tsx  index.tsx
src/components/backend components/: title-bar.tsx
src/components/custom ui/: commands.tsx  dropdown-animate-scheduleCol.tsx  popup-dialog-add-category.tsx  popup-dialog-add-grouping.tsx  popup-dialog-reset-category.tsx  popup-dialog-reset-grouping.tsx  select-dropdown.tsx  theme-dropdown.tsx  theme-mode-dropdown.tsx  theme-toggle.tsx  timeline.tsx  toggle-switch-category.tsx
src/components/extented ui/: animated-background.tsx  dynamic-search.tsx  flow-state-session.tsx  icon-checkbox-group.tsx  popup-dialog.tsx  segmented-control.tsx
src/components/music/: music.tsx
src/components/schedule dashboard/: ActivityPieChart.tsx  BaseColumn.tsx  CalendarColumn.tsx  ColumnHeader.tsx  EventBlock.tsx  FlowSessionsColumn.tsx  ProjectsColumn.tsx  TimeColumn.tsx  currentTimeline.tsx  index.tsx
src/components/shared/: activities-summary-demo.tsx  activities-summary.tsx  activities-time-board.tsx  layout-change.tsx  music-player.tsx  shared.module.css  stage-of-flow.tsx  tabs.tsx  top-bar.tsx  top-bar2.tsx
src/components/shared/backend components/: title-bar.tsx
src/components/shared/music/: music.tsx
src/components/ui/: button.tsx  progress.tsx  scroll-area.tsx  tabs.tsx
src/db/: index.ts
src/hooks/: useClickOutside.tsx  useSetShortcuts.tsx  useStoreSettings.tsx
src/layouts/: RootLayout.tsx
src/lib/: utils.ts
src/lib/constants/: settings-const.tsx
src/lib/themes/: mono.css
src/lib/types/: db.types.ts  heartbeat.types.ts  store-settings-types.ts  store-settings.types.ts
src/lib/zustand/: basic-store.ts  hydrate-store.ts  setting-store.ts  settings-store-loaded.tsx  store.ts
src/lib/zustand/load/: hydrate-store-loaded.tsx  settings-store-loaded.tsx
src/pages/: Categories.tsx  Home.tsx  commands.tsx  notification.tsx  settings.tsx  support.tsx  timer.tsx  widget.tsx
src/pages/home/: home.tsx
src/pages/home/components/: activities-summary-demo.tsx  activities-summary.tsx
src/pages/home/components/schedule dashboard/: ActivitiesColumn.tsx  ActivityPieChart.tsx  BaseColumn.tsx  CalendarColumn.tsx  EventBlock.tsx  EventBlockDetails.tsx  FlowSessionsColumn.tsx  ProjectsColumn.tsx  TimeColumn.tsx  currentTimeline.tsx  index.tsx
src/pages/productivity/: goals.tsx  index.tsx  insights.tsx  trends.tsx
src/pages/project/: project.tsx
src/pages/settings/: account-tab.tsx  activity-tab.tsx  category-tab.tsx  grouping-tab.tsx  theme-tab.tsx
src/pages/teams/: index.tsx  teams.tsx
src/pages/work/: clients.tsx  projects.tsx  tasks.tsx  work.tsx
~/.tauri/: myapp.key  myapp.key.pub
