[package]
name = "Blaze"
version = "0.3.2"
description = "A Tauri App"
authors = ["GrvExplorer, Inc."]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "blaze_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# general dependencies
sysinfo = "0.35.1"
chrono = { version = "0.4.40", features = ["serde"] }
chrono-tz = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] } # feature for surrealdb this macros,rt-multi-thread
# NOTE: , features = ["format"] would be nice, but it is very heavy, and sometime have compiles issues with swc_ components
anyhow = "1"
active-win-pos-rs = { version = "0.9.0", optional = true }
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = ['sqlite', 'runtime-tokio'] }

# @todo can stop using
webview2-com = "0.37.0"
supabase_rs = "0.4.2"
notify = "8.0.0"
winreg = "0.55.0"
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
candle-transformers = { git = "https://github.com/huggingface/candle.git" }
tokenizers = "0.21.1"
hf-hub = "0.4.3"

# tauri dependencies
tauri = { version = "2.6.2", features = ["tray-icon"] }
tauri-plugin-opener = "2.4.0"
tauri-plugin-deep-link = "2.4.0"
tauri-plugin-store = "2.3.0"
tauri-plugin-stronghold = "2.3.0"
tauri-plugin-notification = "2.3.0"

#[dev-dependencies]
tauri-plugin-devtools = "2.0.0"
tauri-plugin-sql = { version = "2.3.0", features = ["sqlite"] }
tauri-plugin-shell = "2.3.0"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.0"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-single-instance = "2.3.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-window-state = "2.3.0"


[target.'cfg(target_os = "windows")'.dependencies]
[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
]

# only macOS
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"

# not for mobile

# android

# ios

# not for desktop

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
